--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ $("a[href='#top']").click(function() {
   $("html, body").animate({ scrollTop: 0 }, "slow");
   return false;
 });
-	
+</script>
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdrZu6gRGJ06hrpKMpxMWLDpVPcJ8YjmyuYlhtAUvi2__QvKA/viewform?embedded=true#start=embed" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 
 https://docs.google.com/forms/d/e/1FAIpQLSdrZu6gRGJ06hrpKMpxMWLDpVPcJ8YjmyuYlhtAUvi2__QvKA/viewform?usp=sf_link#start=embed
@@ -77,6 +77,11 @@ https://docs.google.com/forms/d/e/1FAIpQLSdrZu6gRGJ06hrpKMpxMWLDpVPcJ8YjmyuYlhtA
 <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
 
+<!DOCTYPE html>
+<html>
+	<title>Tarciso_Portfolio</title>
+	<header></header>
+	<body>
 <div class="container-fluid">
 <div class="row top-bar">
   <div  id="top"class="col-xs-6 pull-right" style="width:48%; margin-top:33px;margin-bottom:45px;">
@@ -146,4 +151,5 @@ https://docs.google.com/forms/d/e/1FAIpQLSdrZu6gRGJ06hrpKMpxMWLDpVPcJ8YjmyuYlhtA
   </div>
   <div onclick="scrollToTop()" ><a href="#top" ><button class="btn btn-block pull-down" id="buttonSC" style="border: 2px solid #000066" >Go back</button></a></div>
 </div>
-</script>
+	</body>
+</html>
