--- a/portfolio.html
+++ b/portfolio.html
@@ -39,9 +39,9 @@
 						<div class="row">
 
 							<div class="col-lg-3 col-md-3"></div>
-				      		<div class=" about col-lg-3 col-md-3 col-sm-4 col-xs-4"><a href="https://tloiola1.github.io/Bootstrap-Portfolio/index.html">About</a></div>
-				      		<div class=" portfolio col-lg-3 col-md-3 col-sm-4 col-xs-4"><a href="https://tloiola1.github.io/Bootstrap-Portfolio/portfolio.html">Portfolio</a></div>
-				      		<div class=" contact col-lg-3 col-md-3 col-sm-4 col-xs-4"><a href="https://tloiola1.github.io/Bootstrap-Portfolio/contact.html">Contact</a></div>
+				      		<div class=" about col-lg-3 col-md-3 col-sm-4 col-xs-4"><a href="https://tloiola1.github.io/index.html">About</a></div>
+				      		<div class=" portfolio col-lg-3 col-md-3 col-sm-4 col-xs-4"><a href="https://tloiola1.github.io/portfolio.html">Portfolio</a></div>
+				      		<div class=" contact col-lg-3 col-md-3 col-sm-4 col-xs-4"><a href="https://tloiola1.github.io/contact.html">Contact</a></div>
 
 						</div>
 					
