--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
 	<header class="navbar-fixed">
-		<nav class="grey lighten-5 opacity"></nav>
+		<nav class="grey darken-3 opacity"></nav>
 		<div class="container">
 			<div class="logo"><a href="#" class="left">TDES<small class="small-logo">IGN.COM</small></a>
 				<div class="right menu-bar">
@@ -31,27 +31,46 @@
 	<main>	    
 		<div class="container -main">	
 			<div class="row">	
-				<div class="center-image">
+				<div id="" class="center-align">
 					<img src="assets/images/tarciso.jpg" alt="Tarciso" class="my-image image-responsive hoverable">
 				</div>
 			</div>
 			<div class="section-div">
-				<section class="about-me-section card is-moved">
+				<section class="about-me-section white-text">
 					<div class="">
-					<p class="flow-text">Hi there!! I am very passionate about programming. This jouney started in 2009 when after a lot of relocation within my home country Brasil, I decided it was time for a change. Since I was familiar with Excel programming, I started, in 2010, an Associate Degree in Computer Science finishing it in 2012. In 2013, I arrived in Georgia where I felt just like home. Now coursing a coding boot camp within GA Tech, I can only think about how great my acomplishments will be.
-					</p>
+					<!-- <p class="flow-text">Hi there!! I am very passionate about programming. This jouney started in 2009 when after a lot of relocation within my home country Brasil, I decided it was time for a change. Since I was familiar with Excel programming, I started, in 2010, an Associate Degree in Computer Science finishing it in 2012. In 2013, I arrived in Georgia where I felt just like home. Now coursing a coding boot camp within GA Tech, I can only think about how great my acomplishments will be.
+					</p> -->
 					</div>
 				</section>
-				<section class="about-me-section card is-moved">
-					<div class="">
-					<p class="flow-text">Hi there!! I am very passionate about programming. This jouney started in 2009 when after a lot of relocation within my home country Brasil, I decided it was time for a change. Since I was familiar with Excel programming, I started, in 2010, an Associate Degree in Computer Science finishing it in 2012. In 2013, I arrived in Georgia where I felt just like home. Now coursing a coding boot camp within GA Tech, I can only think about how great my acomplishments will be.
-					</p>
-					</div>
+				<section class="my-portfolio-section card">
+					
 				</section>
 
 			</div>
 		</div>
 	</main>
+	<div class="fixed-action-btn">
+    <a class="btn-floating btn-large light-blue darken-1">
+      <i class="large material-icons menu">menu</i>
+    </a>
+    <ul>
+      	<li>
+      		<a  class="" href="https://www.linkedin.com/in/tarciso-loiola-264a1437/" target="_blank">
+				<img src="assets/images/linkedin.png" alt="LinkedIn" class="in">
+			</a>
+		</li>
+      	<li>
+      		<a href="https://github.com/tloiola1" target="_blank">
+				<img src="assets/images/gitHub.png" alt="gitHub" class="git">
+			</a>
+      	</li>
+      	<li>
+      		<a  class="" href="https://www.freecodecamp.com/tloiola1" target="_blank">
+				<img src="assets/images/freecodecamp.png" alt="freecodecamp" class="fcc" >
+			</a>
+		</li>
+    </ul>
+  </div>
 
 	<footer class="page-footer">
 		<div class="container">
