--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<div class="container -main">	
 			<div class="row">	
 				<div id="" class="center-align">
-					<img src="assets/images/tarciso.jpg" alt="Tarciso" class="my-image image-responsive hoverable">
+					<img src="assets/images/tarciso.JPG" alt="Tarciso" class="my-image image-responsive hoverable">
 				</div>
 			</div>
 			<div class="section-div">
